added class 2 reading notes

--- a/lab-01.html
+++ b/lab-01.html
@@ -1,4 +1,4 @@
-# Class 11 Reading Notes<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
@@ -9,6 +9,11 @@
             h1 {
                 background-color:blueviolet;
                 color:aquamarine; 
+                padding: 15px;
+            }
+            p {
+                padding: 10px;
+                font-size: 17px;
             }
         </style>
     </head>
@@ -25,12 +30,16 @@
         <footer>
             &copy; Emily Greason
         </footer>
-        <script>
-        let name = prompt('What is your name?');
-        let location = prompt('Where are you from?');
-        let year = prompt('What year were you born?');
-        let color = prompt('What is your favorite color?');
-        alert('Hello ' + name + '. You are from ' + location + '. You were born in ' + year + '. Your favorite color is ' + color + ' .');
-        </script>
-    </body>
+  <script>
+    // let name = prompt('What is your name?');
+    // let city = prompt('Where are you from');
+    // let year = prompt('What year were you born?');
+    // let color = prompt('What is your favorite color?');
+    // alert('Hello ' + name + '. You are from ' + city + '. You were born in ' + year + '. Your favorite color is ' + color + ' .');
+    // console.log(name);
+    // console.log(city);
+    // console.log(year);
+    // console.log(color);
+  </script>
+</body>
 </html>
